--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@capacitor/status-bar": "4.1.1",
     "@ionic/angular": "^6.1.9",
     "crypto-js": "^4.1.1",
+    "html5-qrcode": "^2.3.4",
     "ionicons": "^6.0.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
